# Memory-MCP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  stale.yml
fastmcp/: mcp_config.json
include/: types.h
src/: http_server.cpp  main.cpp  memory_scanner.cpp  types.h
src/memory/: memory_scanner.cpp  memory_scanner.h
src/server/: http_server.cpp  http_server.h
tests/: test_memory_scanner.cpp  test_types.cpp
